Bug 1387551 - Handle "general.smoothScroll" with async keyboard scrolling. r=kats

This commit modifies AsyncPanZoomController to scroll immediately for any keyboard
scrolls when the pref, "general.smoothScroll" is disabled.

MozReview-Commit-ID: 3lfRMOCC7er

--HG--
extra : source : 9e9480d318f92811828756267c4b4fb7ea2fcf1b